<resources>
    <string name="app_name">QUICKMAS Retail</string>
    <string name="login_username">User ID</string>
    <string name="login_company_id">Company ID</string>
    <string name="login_password">Password</string>
    <string name="login_submit">লগিন</string>
    <string name="login_fill_up">কোম্পানি আইডি, ইউজার আইডি, পাসওয়ার্ড এর ঘর পূরণ করুন</string>
    <string name="login_noInternet">ইন্টারনেট সংযোগ চালু করুন</string>
    <string name="login_closeDialog">বন্ধ করুন</string>
    <string name="dashboard_sell">বিক্রয়/ওর্ডার</string>
    <string name="dashboard_stock">স্টক</string>
    <string name="dashboard_summary">সারসংক্ষেপ</string>
    <string name="dashboard_memo">মেমো লিস্ট</string>
    <string name="dashboard_sync">আপলোড/ডাউনলোড</string>
    <string name="dashboard_toast_no_memo">মেমো তৈরির পারমিশন নাই</string>
    <string name="dashboard_settings">সেটিংস্‌</string>
    <string name="title_activity_data_upload">DataUpload</string>
    <string name="dataSync_downloadText">স্টক রিসিভ করার জন্য নীচের বাটনটি প্রেস করুন</string>
    <string name="dataSync_uploadText">বিক্রয় সহ তথ্য আপলোড করার জন্য নীচের বাটনটি প্রেস করুন</string>
    <string name="dataSync_uploadText_final">স্টক রিটার্ন, ক্যাশ ট্র্যান্সফার সহ সকল তথ্য আপলোড করে আপনার মোবাইল থেকে তথ্য মুছে ফেলার জন্য নীচের বাটনটি প্রেস করুন</string>
    <string name="dataSync_download">ডাউনলোড</string>
    <string name="dataSync_upload">তথ্য আপলোড</string>
    <string name="dataSync_upload_final">ফাইনাল আপলোড</string>
    <string name="acceptData_acceptButton">পণ্য গ্রহন</string>
    <string name="acceptData_loginError">নতুন পাসওয়ার্ড দিয়া পুনরায় লগিন করুন</string>
    <string name="acceptData_to">থেকে</string>
    <string name="acceptData_target">টার্গেটঃ</string>
    <string name="acceptData_product">প্রোডাক্টঃ</string>
    <string name="acceptData_and">এবং</string>
    <string name="acceptData_gift">গিফটঃ</string>
    <string name="acceptData_sucessMSG">ডাটা ডাউনলোড সফল</string>
    <string name="adaptar_acceptDataCompanySKU">এস কে উ</string>
    <string name="adaptar_acceptDataCompanyQuantity">পরিমান</string>
    <string name="adaptar_acceptDataCompanyTotalProduct">মোট</string>
    <string name="adaptar_acceptDataCompanyTotalGift">মোট</string>
    <string name="adaptar_acceptDataCompanyProductTitle">প্রোডাক্ট</string>
    <string name="adaptar_acceptDataCompanyGiftTitle">গিফট</string>
    <string name="datadownload_dataDownlaing_top_bar">অনলাইনে তথ্য\nডাউনলোড</string>
    <string name="datadownload_online_count_text">অপেক্ষমান অনলাইনে তথ্য ডাউনলোডঃ </string>
    <string name="datadownload_online_running_text">তথ্য ডাউনলোড চলমান</string>
    <string name="datadownload_online_count_positive">তথ্য ডাউনলোড সম্পূর্ণঃ </string>
    <string name="datadownload_online_count_failed">তথ্য ডাউনলোড ব্যর্থঃ </string>
    <string name="datadownload_online_count_negative">তথ্য ডাউনলোড অপেক্ষমানঃ </string>
    <string name="datadownload_online_sucess">তথ্য ডাউনলোড সম্পূর্ণ</string>
    <string name="datadownload_notData">কোন ডাটা পাওয়া যাইনি</string>
    <string name="datadownload_backToHome">হোমে যান</string>
    <string name="stock_opening">ওপেনিং</string>
    <string name="stock_sell">সেল</string>
    <string name="stock_closing">ক্লোজিং</string>
    <string name="stock_grand_total">সর্বমোট</string>
    <string name="sellDashboard_selectOutlet">আউটলেট সিলেক্ট করুন</string>
    <string name="sellQuantity_select">পরিমান</string>
    <string name="sellQuantity_sell_quantity_submit">ওকে</string>
    <string name="sellInvoice_sell_date">তারিখঃ</string>
    <string name="sellInvoice_sell_invoice">মেমো নংঃ</string>
    <string name="sellInvoice_sell_outlet">অউটলেটঃ</string>
    <string name="sellInvoice_sell_sku">এস কে ইউ</string>
    <string name="sellInvoice_sell_quantity">পরিমান</string>
    <string name="sellInvoice_sell_uprice">ইউনিট প্রাইস</string>
    <string name="sellInvoice_sell_amount">প্রাইস</string>
    <string name="sellInvoice_invoice_edit">এডিট</string>
    <string name="sellInvoice_invoice_add_new">অ্যাড নিউ</string>
    <string name="sellInvoice_invoice_proceed">চেক আউট</string>
    <string name="sellInvoice_invoice_no_data_selected">পরিমান সিলেক্ট করুন</string>
    <string name="sellInvoice_invoice_limit_ex_data_selected">পরিমানের বেশি প্রোডাক্ট স্টকে নেই</string>
    <string name="sellInvoice_sell_invoice_discard">বাতিল</string>
    <string name="sellInvoice_sell_invoice_dialog_title">সতর্কবার্তা</string>
    <string name="sellInvoice_sell_invoice_dialog_text">আপনি কি সত্যিই ইনভইসটি বাতিল করতে চান?</string>
    <string name="sellInvoice_sell_invoice_dialog_yes">হ্যাঁ</string>
    <string name="sellInvoice_sell_invoice_dialog_no">না</string>
    <string name="sellInvoice_sell_invoice_prefix">INV-</string>
    <string name="sellInvoice_sell_invoice_type_recheck">মেমো দেখুন</string>
    <string name="sellInvoice_sell_invoice_type_save_print">সেইভ ও প্রিন্ট</string>
    <string name="sellInvoice_sell_invoice_type_save_exit">সেইভ ও বাহির</string>
    <string name="sellInvoiceType_option1_part1">টি এবং </string>
    <string name="sellInvoiceType_option1_part2">টাকার জন্য শুধু মেমো</string>
    <string name="sellInvoiceType_option2_part1">টাকা প্রাপ্তি এবং</string>
    <string name="sellInvoiceType_option2_part2">টি পরে ডেলিভারি দেওয়া হবে</string>
    <string name="sellInvoiceType_option3_part1">টাকা প্রাপ্তি এবং </string>
    <string name="sellInvoiceType_option3_part2">টি ডেলিভারি সম্পন্ন</string>
    <string name="sellInvoiceType_no_option_selected">যেকোনো একটি অপশন সিলেক্ট করুন</string>
    <string name="memo_invoice_id">মেমো</string>
    <string name="memo_quantity">পরিমান</string>
    <string name="memo_amount">এমাউন্ট</string>
    <string name="memo_action">অ্যাকশান</string>
    <string name="memo_total_count">মোটঃ</string>
    <string name="memopopup_payment">পেমেন্ট</string>
    <string name="memopopup_void">বাতিল</string>
    <string name="memopopup_devilery">ডেলিভারি</string>
    <string name="memopopup_print">প্রিন্ট</string>
    <string name="memopopup_print_btn">প্রিন্ট ভিউ</string>
    <string name="memo_diag_payment_1st">আপনি কি</string>
    <string name="memo_diag_payment_2st">টি বুজে পেয়েছেন?</string>
    <string name="memo_diag_payment_toast">পেমেন্ট গ্রহন সম্পন্ন</string>
    <string name="memo_diag_delivery_toast">প্রোডাক্ট ডেলিভারি সম্পন্ন</string>
    <string name="memo_diag_void_toast">প্রোডাক্ট বাতিল সম্পন্ন</string>
    <string name="memo_payment_paid">পেমেন্টঃ পেইড</string>
    <string name="memo_payment_unpaid">পেমেন্টঃ আনপেইড</string>
    <string name="memo_product_delivered">প্রোডাক্টঃ ডিলিভারড</string>
    <string name="memo_product_undelivered">প্রোডাক্টঃ আনডিলিভারড</string>
    <string name="summary_text_sell_history">বিক্রয় হিষটরি</string>
    <string name="summary_text_in_hand">হাতে মজুত</string>
    <string name="summary_sold_history_memo">মেমো</string>
    <string name="summary_sold_history_amount">টাকা</string>
    <string name="summary_sold_history_quantity">পরিমান</string>
    <string name="summary_sold_history_price">মুল্য</string>
    <string name="summary_in_hand_company_name">কোম্পানি</string>
    <string name="summary_in_hand_in_hand">স্টক</string>
    <string name="summary_in_hand_pending_delivery">ডেলিভার যোগ্য</string>
    <string name="summary_in_hand_count_text">হাতে নগদ</string>
    <string name="summary_in_receivable">পাওনা</string>
    <string name="dataUpload_online_count_text">অপেক্ষমান অনলাইনে তথ্য আপলোডঃ </string>
    <string name="dataUpload_online_running_text">তথ্য আপলোড চলমান</string>
    <string name="dataUpload_online_count_positive">তথ্য আপলোড সম্পূর্ণঃ </string>
    <string name="dataUpload_online_count_failed">তথ্য আপলোড ব্যর্থঃ </string>
    <string name="dataUpload_online_count_negative">তথ্য আপলোড অপেক্ষমানঃ </string>
    <string name="dataUpload_online_sucess">তথ্য আপলোড সম্পূর্ণ</string>
    <string name="dataUpload_online_failed">তথ্য আপলোড ব্যর্থ</string>
    <string name="dataUpload_notData">কোন ডাটা পাওয়া যাইনি</string>
    <string name="dataUpload_backToHome">হোমে যান</string>
    <string name="dataUpload_receivable_present">রিসিভাবেলে তথ্য উপস্থিত</string>
    <string name="popup_printer_select_txt">Select Printer</string>
    <string name="popup_printer_select_submit">Print</string>
    <string name="title_activity_cash_statment_show">CashStatmentShow</string>
</resources>
